--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="ryho.org/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="ryho.org/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="ryho.org/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="ryho.org/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="ryho.org/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="ryho.org/assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Sailor
@@ -43,7 +43,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <!-- <img src="ryho.org/ryho.org/assets/img/logo.png" alt=""> -->
         <h1 class="sitename">RYHO</h1>
       </a>
 
@@ -73,7 +73,7 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="assets/img/hero-carousel/image1.webp" alt="">
+          <img src="ryho.org/assets/img/hero-carousel/image1.webp" alt="">
           <div class="carousel-container">
             <h2>Welcome to Raise Your Hand Oraganization<br></h2>
             <p>To bring friendship and joy to children with special needs, peace of mind to their parents, and the values of volunteerism and compassion among our youth.</p>
@@ -82,7 +82,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-2.jfif" alt="">
+          <img src="ryho.org/assets/img/hero-carousel/hero-carousel-2.jfif" alt="">
           <div class="carousel-container">
             <h2>Help to Disable Person</h2>
             <p>Even if you are not very passionate about it, take that responsibility and make the world a better place..</p>
@@ -226,91 +226,91 @@
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Human 1</h4>
                 <p>Make Happiness</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-2.jfif" class="img-fluid" alt="">
+              <img src="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-2.jfif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Help 1</h4>
                 <p>Make Happiness</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-2.jfif" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-2.jfif" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-3.jfif" class="img-fluid" alt="">
+              <img src="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-3.jfif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Happy 1</h4>
                 <p>Make Happiness</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-3.jfif" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-3.jfif" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-4.webp" class="img-fluid" alt="">
+              <img src="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-4.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Human 2</h4>
                 <p>Make Happiness</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-4.webp" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-4.webp" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Help 2</h4>
                 <p>Make Happiness</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-5.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Happy 2</h4>
                 <p>Make Happiness</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-7.webp" class="img-fluid" alt="">
+              <img src="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-7.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Human 3</h4>
                 <p>Make Happiness</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-7.webp" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-7.webp" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-8.jfif" class="img-fluid" alt="">
+              <img src="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-8.jfif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Help 3</h4>
                 <p>Make Happiness</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-8.jfif" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-8.jfif" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-9.jfif" class="img-fluid" alt="">
+              <img src="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-9.jfif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Happy 3</h4>
                 <p>Make Happiness</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-9.jfif" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="ryho.org/assets/img/masonry-portfolio/masonry-portfolio-9.jfif" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -393,18 +393,18 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="ryho.org/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="ryho.org/assets/vendor/php-email-form/validate.js"></script>
+  <script src="ryho.org/assets/vendor/aos/aos.js"></script>
+  <script src="ryho.org/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="ryho.org/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="ryho.org/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="ryho.org/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="ryho.org/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="ryho.org/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="ryho.org/assets/js/main.js"></script>
 
 </body>
 
