--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="ryho.org/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="ryho.org/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="ryho.org/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="ryho.org/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="ryho.org/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://nafrinaa.github.io/ryho.org/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://nafrinaa.github.io/ryho.org/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://nafrinaa.github.io/ryho.org/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="https://nafrinaa.github.io/ryho.org/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="https://nafrinaa.github.io/ryho.org/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="ryho.org/assets/css/main.css" rel="stylesheet">
@@ -393,18 +393,18 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="ryho.org/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="ryho.org/assets/vendor/php-email-form/validate.js"></script>
-  <script src="ryho.org/assets/vendor/aos/aos.js"></script>
-  <script src="ryho.org/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="ryho.org/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="ryho.org/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="ryho.org/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="ryho.org/assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="ryho.org/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="https://nafrinaa.github.io/ryho.org/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://nafrinaa.github.io/ryho.org/assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://nafrinaa.github.io/ryho.org/assets/vendor/aos/aos.js"></script>
+  <script src="https://nafrinaa.github.io/ryho.org/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="https://nafrinaa.github.io/ryho.org/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="https://nafrinaa.github.io/ryho.org/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="https://nafrinaa.github.io/ryho.org/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="https://nafrinaa.github.io/ryho.org/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="https://nafrinaa.github.io/ryho.org/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="ryho.org/assets/js/main.js"></script>
+  <script src="https://nafrinaa.github.io/ryho.org/assets/js/main.js"></script>
 
 </body>
 
