--- a/index.html
+++ b/index.html
@@ -11,5 +11,20 @@
 </head>
 <body>
     <p>Redirecting you to the new page...</p>
+   <section id="ai-gallery" class="gallery section">
+  <div class="container">
+    <h2>AI Generated Gallery</h2>
+    <div class="row">
+      <div class="col-lg-4 col-md-6">
+       <img src="assets/img/hero-carousel/image1.webp" alt="">
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <img src="assets/img/ai-image2.jpg" class="img-fluid" alt="AI Generated Image 2">
+      </div>
+      <!-- Add more images as needed -->
+    </div>
+  </div>
+</section>
+
 </body>
 </html>
